--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@vue/compiler-sfc": "^3.1.4",
     "webpack-dev-server": "^3.11.2"
   }
 }
